test/errors/type/collections/set/__len.yasl
echo collections.set().__len(1)
